--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -15,24 +15,28 @@ permissions:
 
 jobs:
 
-  trigger:
-    if: # only run on pull request comments and very specific comment body string as defined in our branch-deploy settings
-      ${{ github.event.issue.pull_request &&
-      (contains(github.event.comment.body, '.deploy') ||
-      contains(github.event.comment.body, '.lock') ||
-      contains(github.event.comment.body, '.wcid') ||
-      contains(github.event.comment.body, '.unlock')) }}
-    runs-on: ubuntu-latest
-    outputs: # set outputs for use in downstream jobs
-      continue: ${{ steps.branch-deploy.outputs.continue }}
-      noop: ${{ steps.branch-deploy.outputs.noop }}
-      deployment_id: ${{ steps.branch-deploy.outputs.deployment_id }}
-      environment: ${{ steps.branch-deploy.outputs.environment }}
-      ref: ${{ steps.branch-deploy.outputs.ref }}
-      comment_id: ${{ steps.branch-deploy.outputs.comment_id }}
-      initial_reaction_id: ${{ steps.branch-deploy.outputs.initial_reaction_id }}
-      actor_handle: ${{ steps.branch-deploy.outputs.actor_handle }}
+  # trigger:
+  #   if: # only run on pull request comments and very specific comment body string as defined in our branch-deploy settings
+  #     ${{ github.event.issue.pull_request &&
+  #     (contains(github.event.comment.body, '.deploy') ||
+  #     contains(github.event.comment.body, '.lock') ||
+  #     contains(github.event.comment.body, '.wcid') ||
+  #     contains(github.event.comment.body, '.unlock')) }}
+  #   runs-on: ubuntu-latest
+  #   outputs: # set outputs for use in downstream jobs
+  #     continue: ${{ steps.branch-deploy.outputs.continue }}
+  #     noop: ${{ steps.branch-deploy.outputs.noop }}
+  #     deployment_id: ${{ steps.branch-deploy.outputs.deployment_id }}
+  #     environment: ${{ steps.branch-deploy.outputs.environment }}
+  #     ref: ${{ steps.branch-deploy.outputs.ref }}
+  #     comment_id: ${{ steps.branch-deploy.outputs.comment_id }}
+  #     initial_reaction_id: ${{ steps.branch-deploy.outputs.initial_reaction_id }}
+  #     actor_handle: ${{ steps.branch-deploy.outputs.actor_handle }}
 
+
+  demo:
+    if: ${{ github.event.issue.pull_request }}
+    runs-on: ubuntu-latest
     steps:
       # execute the branch-deploy action
       - uses: github/branch-deploy@v6.0.1
@@ -46,7 +50,7 @@ jobs:
           # admins: "false" # <--- add your GitHub username here (if you want to use the admins feature)
 
   build:
-    needs: [ trigger ]
+    needs: [ demo ]
     if: ${{ needs.trigger.outputs.continue == 'true' }} # only run if the trigger job set continue to true
     # environment:
     #   name: github-pages
