--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -37,7 +37,7 @@ jobs:
 
     steps:
       # execute the branch-deploy action
-      - uses: github/branch-deploy@vX.X.X
+      - uses: github/branch-deploy@v6.0.1
         id: branch-deploy
         with:
           trigger: ".deploy"
