only allow deploys to run if pr approved

--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -18,11 +18,12 @@ jobs:
 
   demo:
     if: # only run on pull request comments and very specific comment body string as defined in our branch-deploy settings
-      ${{ github.event.issue.pull_request &&
+      ${{ github.event.issue.pull_request && 
       (contains(github.event.comment.body, '.deploy') ||
       contains(github.event.comment.body, '.lock') ||
       contains(github.event.comment.body, '.wcid') ||
-      contains(github.event.comment.body, '.unlock')) }}
+      contains(github.event.comment.body, '.unlock')) &&
+      github.event.review.state == 'approved' }}
     runs-on: ubuntu-latest
       
     outputs:
