--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -82,7 +82,9 @@ jobs:
           
         # If the branch-deploy Action was triggered, run the deployment (i.e. '.deploy')
       - name: deploy
-        run: echo "Deploying to ${{needs.demo.outputs.environment}}" # this could be anything you want
+        run: |
+          echo "Deploying to ${{needs.demo.outputs.environment}}" # this could be anything you want
+          echo "$S3_BUCKET"
 
   result:
     needs: [ demo, build, deploy ]
