--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -84,7 +84,7 @@ jobs:
       - name: deploy
         run: |
           echo "Deploying to ${{needs.demo.outputs.environment}}" # this could be anything you want
-          echo "$S3_BUCKET"
+          echo "${{ vars.S3_BUCKET }}"
 
   result:
     needs: [ demo, build, deploy ]
