--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -76,6 +76,7 @@ jobs:
   deploy:
     needs: [ demo, build ]
     runs-on: ubuntu-latest
+    environment: ${{ needs.demo.outputs.environment }}
     if: ${{ needs.demo.outputs.continue == 'true' }} # only run if the trigger job set continue to true
 
     steps:
