add skip_reviews for staging

--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -46,6 +46,7 @@ jobs:
           # production_environment: "github-pages"
           skip_completing: "true" # we will complete the deployment manually in the 'result' job
           # admins: "false" # <--- add your GitHub username here (if you want to use the admins feature)
+          skip_reviews: "staging"
 
   build:
     needs: [ demo ]
