--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -74,10 +74,10 @@ jobs:
       - name: Build
         run: npm run build
 
-  deploy:
+  deployStaging:
     needs: [ demo, build ]
     runs-on: ubuntu-latest
-    environment: ${{ needs.demo.outputs.environment }}
+    environment: staging # ${{ needs.demo.outputs.environment }}
     if: ${{ needs.demo.outputs.continue == 'true' }} # only run if the trigger job set continue to true
 
     steps:
@@ -85,11 +85,25 @@ jobs:
         # If the branch-deploy Action was triggered, run the deployment (i.e. '.deploy')
       - name: deploy
         run: |
-          echo "Deploying to ${{needs.demo.outputs.environment}}" # this could be anything you want
+          echo "Deploying to Staging" # this could be anything you want
+          echo "${{ vars.S3_BUCKET }}"
+
+  deployProd:
+    needs: [ demo, build, deployStaging ]
+    runs-on: ubuntu-latest
+    environment: production # ${{ needs.demo.outputs.environment }}
+    if: ${{ needs.demo.outputs.continue == 'true' }} # only run if the trigger job set continue to true
+
+    steps:
+          
+        # If the branch-deploy Action was triggered, run the deployment (i.e. '.deploy')
+      - name: deploy
+        run: |
+          echo "Deploying to Production" # this could be anything you want
           echo "${{ vars.S3_BUCKET }}"
 
   result:
-    needs: [ demo, build, deploy ]
+    needs: [ demo, build, deployProd ]
     runs-on: ubuntu-latest
     # run even on failures but only if the trigger job set continue to true
     if: ${{ always() && needs.demo.outputs.continue == 'true' }}
