--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -42,7 +42,7 @@ jobs:
         with:
           trigger: ".deploy"
           environment: "production"
-          environment_targets: "staging"
+          environment_targets: "production, staging"
           # production_environment: "github-pages"
           skip_completing: "true" # we will complete the deployment manually in the 'result' job
           # admins: "false" # <--- add your GitHub username here (if you want to use the admins feature)
