--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -77,7 +77,7 @@ jobs:
   deploy:
     needs: [ trigger, build ]
     runs-on: ubuntu-latest
-    environment: staging # ${{ needs.trigger.outputs.environment }}
+    environment: ${{ needs.trigger.outputs.environment }}
     if: ${{ needs.trigger.outputs.continue == 'true' }} # only run if the trigger job set continue to true
 
     steps:
